Search with Real time Input event

--- a/app/views/trends/index.html.erb
+++ b/app/views/trends/index.html.erb
@@ -1,9 +1,9 @@
 <section>
   <h1>Trends</h1>
-  <%= form_with(url: root_path, method: :get, data: {turbo_frame: "trends", turbo_action: "advance"}) do |form| %>
+  <%= form_with(url: root_path, method: :get, data: {controller: "search-form", turbo_frame: "trends", turbo_action: "advance"}) do |form| %>
     <%= form.label :query, "Search by trend keyword:", class: "block mb-2" %>
     <div class="flex space-x-3">
-      <%= form.text_field :query, class: "py-3 px-4 rounded border ring-0 focus:ring-4 focus:ring-orange-100 focus:shadow-none focus:border-orange-500 focus:outline-none" %>
+      <%= form.text_field :query, data: {action: "input->search-form#search"}, class: "py-3 px-4 rounded border ring-0 focus:ring-4 focus:ring-orange-100 focus:shadow-none focus:border-orange-500 focus:outline-none" %>
       <%= form.submit 'Search', class: "px-4 py-3 font-medium
   bg-orange-300 text-neutal-900 rounded flex items-center cursor-pointer hover:bg-orange-400 focus:ring-4 ring-0 focus:ring-orange-100" %>
     </div>
