Add Regex and Improve Search Functionality including search counts

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,9 +11,11 @@
   </head>
   <body>
     <main class="mt-28 flex justify-center px-5">
-      <p><%= notice %></p>
-      <p><%= alert %></p>
-      <%= yield %>
+      <div>
+        <p><%= notice %></p>
+        <p><%= alert %></p>
+        <%= yield %>
+      </div>
     </main>
   </body>
 </html>
