--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,12 +10,16 @@
     <%= javascript_importmap_tags %>
   </head>
   <body>
-    <main class="mt-28 flex justify-center px-5">
+    <div class=" flex justify-center w-full bg-blue-200 px-5">
       <div>
-        <p><%= notice %></p>
-        <p><%= alert %></p>
+        <% if notice %>
+          <p class="bg-green-300 text-center py-2"><%= notice %></p>
+        <% end %>
+        <% if alert %>
+          <p class="bg-red-300 text-center py-2">alert<%= alert %></p>
+        <% end %>
         <%= yield %>
       </div>
-    </main>
+    </div>
   </body>
 </html>
