--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,16 +1,16 @@
 <section>
   <h2>Sign up</h2>
+  <%= render "devise/shared/error_messages", resource: resource %>
   <%= form_for(resource, as: resource_name, url: registration_path(resource_name), data: { turbo: false }) do |f| %>
-    <%= render "devise/shared/error_messages", resource: resource %>
-    <%= f.label :username %><br />
+    <%= f.label :username %>
     <%= f.text_field :username, autofocus: true, autocomplete: "username", class: "block" %>
     <%= f.label :password %>
     <% if @minimum_password_length %>
       <em>(<%= @minimum_password_length %> characters minimum)</em>
-    <% end %><br />
+    <% end %>
     <%= f.password_field :password, autocomplete: "new-password", class: "block" %>
-    <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
+    <%= f.label :password_confirmation %>
+    <%= f.password_field :password_confirmation, autocomplete: "new-password", class: "block" %>
     <div class="flex justify-center">
       <%= f.submit "Sign up" %>
     </div>
