--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,11 +12,12 @@
   <body>
     <div class=" flex justify-center w-full bg-blue-200 px-5">
       <div>
+        <%= render 'partials/nav' %>
         <% if notice %>
           <p class="bg-green-300 text-center py-2"><%= notice %></p>
         <% end %>
         <% if alert %>
-          <p class="bg-red-300 text-center py-2">alert<%= alert %></p>
+          <p class="bg-red-300 text-center py-2"><%= alert %></p>
         <% end %>
         <%= yield %>
       </div>
