--- a/app/assets/stylesheets/application.tailwind.css
+++ b/app/assets/stylesheets/application.tailwind.css
@@ -1,13 +1,15 @@
+@import url('https://fonts.googleapis.com/css2?family=Quicksand&display=swap');
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
-/*
-
 @layer components {
-  .btn-primary {
-    @apply py-2 px-4 bg-blue-200;
+  .input {
+    @apply bg-input rounded-lg w-full focus:bg-input/60;
+  }
+
+  .btn {
+    @apply bg-navText text-white rounded-lg w-full py-2 hover:bg-navText/60 mt-4 cursor-pointer;
   }
 }
-
-*/
