--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,15 +9,35 @@
     <%= stylesheet_link_tag "application", "data-turbo-track": "reload" %>
     <%= javascript_importmap_tags %>
   </head>
-  <body>
-    <div class=" flex justify-center w-full bg-blue-200 px-5">
+  <body class="bg-bg text-white">
+    <div class="flex justify-center w-full px-5 font-quicksand">
       <div>
         <%= render 'partials/nav' %>
+        <div class="flex flex-col items-center p-4">
+          <%= image_tag("logo.png", class: "h-28") %>
+          <h1 class="text-text font-bold text-3xl">Web Arena</h1>
+        </div>
+        <div class="fixed -z-10 -top-28 -left-24">
+          <%= image_tag("tl.png") %>
+        </div>
+        <div class="fixed -z-10 -top-40 right-0">
+          <%= image_tag("tr.png") %>
+        </div>
+        <div class="fixed -z-10 bottom-0 left-0">
+          <%= image_tag("bl.png") %>
+        </div>
+        <div class="fixed -z-10 bottom-0 right-0">
+          <%= image_tag("br.png") %>
+        </div>
         <% if notice %>
-          <p class="bg-green-300 text-center py-2"><%= notice %></p>
+          <div class="flex justify-center">
+            <p class="bg-green-200 border-gray-200 border-2 text-green-900 w-fit rounded-lg px-4 py-1 font-bold mb-4"><%= notice %></p>
+          </div>
         <% end %>
         <% if alert %>
-          <p class="bg-red-300 text-center py-2"><%= alert %></p>
+          <div class="flex justify-center">
+            <p class="bg-red-200 border-gray-orange-200 border-2 text-red-900 w-fit rounded-lg px-4 py-1 font-bold mb-4 mt-4"><%= alert %></p>
+          </div>
         <% end %>
         <%= yield %>
       </div>
