--- a/app/views/trends/show.html.erb
+++ b/app/views/trends/show.html.erb
@@ -1,3 +1,12 @@
-Show Page
-<br>
-<%= @trend.keyword %>
+<section class="flex justify-center">
+  <div class="flex flex-col h-[200px] justify-center">
+    <p class="font-bold text-lg">
+      <%= @trend.keyword %>
+    </p>
+    <br>
+    <p class="text-gray-100">Hehe! 🤭 I also don't know. Please
+      <a href="https://www.google.com" class="underline">Google</a>
+      it
+    </p>
+  </div>
+</section>
