--- a/app/assets/stylesheets/application.tailwind.css
+++ b/app/assets/stylesheets/application.tailwind.css
@@ -10,6 +10,24 @@
   }
 
   .btn {
-    @apply bg-navText text-white rounded-lg w-full py-2 hover:bg-navText/60 mt-4 cursor-pointer;
+    @apply bg-primary text-white rounded-lg w-full py-2 hover:bg-primary/60 mt-4 cursor-pointer;
   }
 }
+
+/* Change Autocomplete styles in Chrome*/
+input:-webkit-autofill,
+input:-webkit-autofill:hover,
+input:-webkit-autofill:focus,
+textarea:-webkit-autofill,
+textarea:-webkit-autofill:hover,
+textarea:-webkit-autofill:focus,
+select:-webkit-autofill,
+select:-webkit-autofill:hover,
+select:-webkit-autofill:focus {
+  border: 1px solid rgba(255, 163, 192, 0.5);
+  -webkit-text-fill-color: white;
+  -webkit-box-shadow: 0 0 0px 1000px rgba(255, 163, 192, 0.5) inset;
+  box-shadow: 0 0 0px 1000px rgba(255, 163, 192, 0.5) inset;
+  transition: background-color 5000s ease-in-out 0s;
+}
+
