--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,11 +13,11 @@
     <div class="flex justify-center w-full px-5 font-quicksand">
       <div>
         <%= render 'partials/nav' %>
-        <div class="flex flex-col items-center p-4">
+        <div class="flex flex-col items-center p-4 mt-12">
           <%= image_tag("logo.png", class: "h-28") %>
           <h1 class="text-text font-bold text-3xl">Web Arena</h1>
         </div>
-        <div class="fixed -z-10 -top-28 -left-24">
+        <div class="fixed -z-10 -top-44 -left-24">
           <%= image_tag("tl.png") %>
         </div>
         <div class="fixed -z-10 -top-40 right-0">
