--- a/app/views/partials/_nav.html.erb
+++ b/app/views/partials/_nav.html.erb
@@ -1,8 +1,8 @@
-<section class="flex justify-center h-10 items-center bg-navBg text-navText w-screen">
-  <nav class="flex justify-end gap-8 w-[80%]">
+<section class="flex justify-center h-10 items-center text-primary w-screen">
+  <nav class="flex justify-end gap-8 w-[80%] font-bold">
     <% if current_user %>
       <%= current_user.username %>
-      <%= button_to "Sign Out", destroy_user_session_path, method: :delete, data: { turbo: :false }, class: "hover:text-black" %>
+      <%= button_to "Sign Out", destroy_user_session_path, method: :delete, data: { turbo: :false }, class: "hover:text-white" %>
     <% else %>
       <p class="<%= 'text-red-400' if current_page?(new_user_session_path) %>">
         <%= link_to "Sign In", new_user_session_path %>
