--- a/app/views/trends/_trends.html.erb
+++ b/app/views/trends/_trends.html.erb
@@ -1,7 +1,7 @@
-<div class="w-[500px]">
+<div class="w-[500px] mt-1">
   <%= turbo_frame_tag "trends" do %>
     <% trends.each do |trend| %>
-      <div class="flex justify-between px-4 py-2 bg-input/80 text-white hover:bg-input/40">
+      <div class="flex justify-between px-4 py-2 text-black bg-gray-300 hover:bg-input/40 hover:text-white">
         <span class="w-full ">
           <%= link_to trend.keyword, trend_path(trend.id) %>
         </span>
