Fixed Rubocop and Stylelint

--- a/app/assets/stylesheets/application.tailwind.css
+++ b/app/assets/stylesheets/application.tailwind.css
@@ -14,7 +14,7 @@
   }
 }
 
-/* Change Autocomplete styles in Chrome*/
+/* Change Autocomplete styles in Chrome */
 input:-webkit-autofill,
 input:-webkit-autofill:hover,
 input:-webkit-autofill:focus,
@@ -26,8 +26,7 @@ select:-webkit-autofill:hover,
 select:-webkit-autofill:focus {
   border: 1px solid rgba(255, 163, 192, 0.5);
   -webkit-text-fill-color: white;
-  -webkit-box-shadow: 0 0 0px 1000px rgba(255, 163, 192, 0.5) inset;
-  box-shadow: 0 0 0px 1000px rgba(255, 163, 192, 0.5) inset;
+  -webkit-box-shadow: 0 0 0 1000px rgba(255, 163, 192, 0.5) inset;
+  box-shadow: 0 0 0 1000px rgba(255, 163, 192, 0.5) inset;
   transition: background-color 5000s ease-in-out 0s;
 }
-
