--- a/app/views/partials/_nav.html.erb
+++ b/app/views/partials/_nav.html.erb
@@ -2,7 +2,7 @@
   <nav class="flex justify-end gap-8 w-[80%] font-bold">
     <% if current_user %>
       <%= current_user.username %>
-      <%= button_to "Sign Out", destroy_user_session_path, method: :delete, data: { turbo: :false }, class: "hover:text-white" %>
+      <%= button_to "Sign Out", destroy_user_session_path, method: :delete, data: { turbo: :false }, class: "hover:text-red-400" %>
     <% else %>
       <p class="<%= 'text-red-400' if current_page?(new_user_session_path) %>">
         <%= link_to "Sign In", new_user_session_path %>
