--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,15 +8,18 @@
     <%= stylesheet_link_tag "tailwind", "inter-font", "data-turbo-track": "reload" %>
     <%= stylesheet_link_tag "application", "data-turbo-track": "reload" %>
     <%= javascript_importmap_tags %>
+    <script defer src="https://unpkg.com/alpinejs@3.x.x/dist/cdn.min.js"></script>
   </head>
   <body class="bg-bg text-white">
     <div class="flex justify-center w-full px-5 font-quicksand">
       <div>
-        <%= render 'partials/nav' %>
-        <div class="flex flex-col items-center p-4 mt-12">
-          <%= image_tag("logo.png", class: "h-28") %>
-          <h1 class="text-text font-bold text-3xl">Web Arena</h1>
-        </div>
+        <% if !current_page?('/dashboard') %>
+          <%= render 'partials/nav' %>
+          <div class="flex flex-col items-center p-4 mt-12">
+            <%= image_tag("logo.png", class: "h-28") %>
+            <h1 class="text-text font-bold text-3xl">Web Arena</h1>
+          </div>
+        <% end %>
         <div class="fixed -z-10 -top-44 -left-24">
           <%= image_tag("tl.png") %>
         </div>
@@ -31,12 +34,12 @@
         </div>
         <% if notice %>
           <div class="flex justify-center">
-            <p class="bg-green-200 border-gray-200 border-2 text-green-900 w-fit rounded-lg px-4 py-1 font-bold mb-4"><%= notice %></p>
+            <p class="text-green-400 w-fit rounded-lg font-bold mb-4">Notice<%= notice %></p>
           </div>
         <% end %>
         <% if alert %>
           <div class="flex justify-center">
-            <p class="bg-red-200 border-gray-orange-200 border-2 text-red-900 w-fit rounded-lg px-4 py-1 font-bold mb-4 mt-4"><%= alert %></p>
+            <p class="text-red-500 w-fit rounded-lg font-bold mb-2"><%= alert %></p>
           </div>
         <% end %>
         <%= yield %>
