Route Management with Authorization

--- a/app/views/admin/user_trends.html.erb
+++ b/app/views/admin/user_trends.html.erb
@@ -1,4 +1,5 @@
-Trends of the USER
+Trends of the
+<%= @user.username %>
 <% @trends.each do |trend| %>
   <div>
     <span class=""><%= trend.id %></span>
