--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -34,7 +34,7 @@
         </div>
         <% if notice %>
           <div class="flex justify-center">
-            <p class="text-green-400 w-fit rounded-lg font-bold mb-4">Notice<%= notice %></p>
+            <p class="text-green-400 w-fit rounded-lg font-bold mb-4"><%= notice %></p>
           </div>
         <% end %>
         <% if alert %>
