--- a/app/views/partials/_nav.html.erb
+++ b/app/views/partials/_nav.html.erb
@@ -13,10 +13,10 @@
       <%= button_to "Sign Out", destroy_user_session_path, method: :delete, data: { turbo: :false }, class: "hover:text-red-400" %>
     <% else %>
       <p class="<%= 'text-red-400' if current_page?(new_user_session_path) %>">
-        <%= link_to "Sign In", new_user_session_path %>
+        <%= link_to "Sign In", new_user_session_path, class: "hover:text-red-400" %>
       </p>
       <p class="<%= 'text-red-400' if current_page?(new_user_registration_path) %>">
-        <%= link_to "Sign Up", new_user_registration_path %>
+        <%= link_to "Sign Up", new_user_registration_path, class: "hover:text-red-400" %>
       </p>
     <% end %>
   </nav>
