--- a/app/views/admin/trend_users.html.erb
+++ b/app/views/admin/trend_users.html.erb
@@ -1,4 +1,5 @@
-Users of the Trend
+Users who are interested in the Topic
+<%= @trend.keyword %>
 <% @users.each do |user| %>
   <div>
     <span class=""><%= user.id %></span>
