--- a/app/views/partials/_trends.html.erb
+++ b/app/views/partials/_trends.html.erb
@@ -1,3 +1,1 @@
-<% @trends.each do |trend| %>
-  <%= trend.keyword %>
-<% end %>
+<%= render 'partials/table', objects: @trends, attributes: ["ID", "Keyword", "Popularity", "Users"], model: "Trend" %>
