--- a/app/views/partials/_users.html.erb
+++ b/app/views/partials/_users.html.erb
@@ -1,25 +1,1 @@
-<h1 class="flex justify-center mt-4 font-bold text-xl">Users</h1>
-<table class="w-full text-center mt-4">
-  <thead class="pt-8">
-    <tr class="bg-white/40 text-black font-bold">
-      <th class="py-2">ID</th>
-      <th>Username</th>
-      <th>Trends</th>
-    </tr>
-  </thead>
-  <tbody>
-    <% @users.each do |user| %>
-      <tr class="even:bg-black/20 odd:bg-black/30 hover:bg-black/60">
-        <td class="py-2">
-          <%= user.id %>
-        </td>
-        <td>
-          <%= link_to user.username, "/users/#{user.id}/trends" %>
-        </td>
-        <td>
-          <%= user.trends.count %>
-        </td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
+<%= render 'partials/table', objects: @users, attributes: ["ID", "Username", "Trends"], model: "User" %>
