--- a/app/views/partials/_users.html.erb
+++ b/app/views/partials/_users.html.erb
@@ -1,1 +1,2 @@
-<%= render 'partials/table', objects: @users, attributes: ["ID", "Username", "Trends"], model: "User" %>
+<h1 class="flex justify-center mt-4 font-bold text-xl">Users</h1>
+<%= render 'partials/table', objects: @users, attributes: ["ID", "Username", "Total Trends"], model: "User" %>
