--- a/app/views/partials/_trends.html.erb
+++ b/app/views/partials/_trends.html.erb
@@ -1,1 +1,2 @@
-<%= render 'partials/table', objects: @trends, attributes: ["ID", "Keyword", "Popularity", "Users"], model: "Trend" %>
+<h1 class="flex justify-center mt-4 font-bold text-xl">Trends</h1>
+<%= render 'partials/table', objects: @trends, attributes: ["ID", "Keyword", "Popularity", "Total Users"], model: "Trend" %>
