--- a/app/views/admin/dashboard.html.erb
+++ b/app/views/admin/dashboard.html.erb
@@ -1,12 +1,12 @@
 <section class="flex flex-col h-screen" x-data="{ open: true }">
   <div class="flex h-full">
-    <div class="bg-black/40 h-full w-64 pt-12">
-        <button @click="open = true" class="pr-8 h-12 mt-2 flex items-center justify-center gap-8 hover:bg-black/30 w-full">
-          <%= image_tag "users.svg" %>
+    <div id="panel" class="bg-black/40 h-full w-64 pt-12">
+        <button @click="open = true" x-bind:class="open ? 'bg-black/30 pr-8 h-12 mt-2 flex items-center justify-center gap-8 hover:bg-black/30 w-full' : 'pr-8 h-12 mt-2 flex items-center justify-center gap-8 hover:bg-black/30 w-full'">
+          <%= image_tag "users.svg", id: "users-icon" %>
           Users
         </button>
-        <button @click="open = false" class="pr-8 h-12 mt-2 flex items-center justify-center gap-8 hover:bg-black/30 w-full">
-          <%= image_tag "trend.svg" %>
+        <button @click="open = false" x-bind:class="!open ? 'bg-black/30 pr-8 h-12 mt-2 flex items-center justify-center gap-8 hover:bg-black/30 w-full' : 'pr-8 h-12 mt-2 flex items-center justify-center gap-8 hover:bg-black/30 w-full'">
+          <%= image_tag "trend.svg", id: "trend-icon" %>
           Trends
         </button>
     </div>
