--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,7 +14,7 @@
     <div class="flex justify-center w-full px-5 font-quicksand">
       <div>
         <%= render 'partials/nav' %>
-        <% if current_page?(root_path) || current_page?(new_user_session_path) || current_page?(new_user_registration_path) %>
+        <% unless current_user&.role == 'admin' && !current_page?(root_path) %>
           <div class="flex flex-col items-center p-4 mt-12">
             <%= image_tag("logo.png", class: "h-28") %>
             <h1 class="text-text font-bold text-3xl">Web Arena</h1>
